--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <section id="welcome">
     <div class="layer_one">
         <div class="avatar-container">
-            <img loading="lazy" class="illustration" src="../../../assets/template/welcome/gbastos-Illustration@2x.png" alt="Salil Agrawal"/>
+            <img loading="lazy" class="illustration" src="/salil/src/assets/template/welcome/gbastos-Illustration@2x.png" alt="Salil Agrawal"/>
             <app-welcome-background></app-welcome-background>
         </div>
         <app-welcome-dialog></app-welcome-dialog>
